discussion/kv_engine/165247/165247_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47687: Add triggerImplicitCompaction and createCheckpoint to MagmaKVStore

Both these APIs are meant to be used for testing. triggerImplicitCompaction
will make it easier to test Magma's background compaction. We use a hack
of writing a bunch of tiny files to do this atm. newCheckpoint will us to
test Magma's rollback without having to create a rollback point for every
write.

Change-Id: I5597679bc433931eabdc139a9e68731b770f0ae3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Apaar gupta
Date: 2021-11-08 14:53:15.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-08 15:03:46.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35330/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:89:19:
error: no member named "TriggerImplicitCompaction" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35330/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41609/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc(89): error C2039: "TriggerImplicitCompaction": is not a member of "magma::Magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41609/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13848/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:89:19: error: no member named "TriggerImplicitCompaction" in "magma::Magma" [clang-diagnostic-error]
    return magma->TriggerImplicitCompaction(kvID);
                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13848/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:89:19:
error: no member named "TriggerImplicitCompaction" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13848/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15749/ : FAILURE

Compile error at [2021-11-08T14:55:51.878Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:89:19:
error: ?class magma::Magma? has no member named ?TriggerImplicitCompaction?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15749/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3483/ : FAILURE

Compile error at [2021-11-08T14:56:13.524Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:89:19:
error: no member named "TriggerImplicitCompaction" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3483/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23804/ : FAILURE

Compile error at [2021-11-08T14:56:27.028Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master@2/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:89:19:
error: no member named "TriggerImplicitCompaction" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23804/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3555/ : FAILURE

Compile error at [2021-11-08T14:58:08.188Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@5/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:89:19:
error: ?class magma::Magma? has no member named ?TriggerImplicitCompaction?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3555/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14633/ : FAILURE

Compile error at [2021-11-08T14:55:49.726Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:89:19:
error: no member named "TriggerImplicitCompaction" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14633/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16439/ : FAILURE

Compile error at [2021-11-08T14:54:54.068Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:89:19:
error: no member named "TriggerImplicitCompaction" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16439/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12650/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15465/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
